# agent-trap

./: .env.example  .gitignore  README.md  pyproject.toml
agenttrap/: __main__.py
agenttrap/agent/: __init__.py  prompts.py  runtime.py  schemas.py
agenttrap/api/: __init__.py  main.py  orchestrator.py
agenttrap/db/: __init__.py  client.py  schema.py
agenttrap/engine/: __init__.py  classifier.py  tracer.py
agenttrap/models/: __init__.py  scenario.py
agenttrap/registry/: __init__.py  loader.py
agenttrap/sandbox/: __init__.py  executor.py  tools.py
agenttrap/workspace/: __init__.py  simulator.py
dashboard/: package-lock.json
dashboard/src/: App.jsx  index.css
scenarios/: EM-01.yaml  EM-02.yaml  EM-03.yaml  EM-04.yaml  EM-05.yaml  EM-06.yaml  EM-07.yaml  SI-01.yaml  SI-02.yaml  SI-03.yaml  SI-04.yaml  SI-05.yaml  SI-06.yaml  WB-01.yaml  WB-02.yaml  WB-03.yaml  WB-04.yaml  WB-05.yaml  WB-06.yaml  WB-07.yaml
scripts/: agent_demo.py  api_demo.py  classification_demo.py  generate_scenarios.py  sandbox_demo.py
tests/: test_agent.py  test_api.py  test_classifier.py  test_db.py  test_registry.py  test_sandbox.py  test_workspace.py
